--- a/templates/users.html
+++ b/templates/users.html
@@ -6,7 +6,8 @@
     <title>Users - MovieWeb App</title>
 </head>
 <body>
-    <h1>Users</h1>
+    <h1>Welcome to MovieWeb App!</h1>
+    <h2>Users</h2>
     <ul>
         {% for user in users %}
             <li><a href="{{ url_for('get_user_movies', user_id=user['id']) }}">{{ user["name"] }}</a></li>
