--- a/templates/update_movie.html
+++ b/templates/update_movie.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Update Movie - MovieWeb App</title>
 </head>
 <body>
