--- a/templates/user_movies.html
+++ b/templates/user_movies.html
@@ -7,27 +7,30 @@
     <title>User Movies - MovieWeb App</title>
 </head>
 <body>
-    <h1>{{ user['name'] }}'s Favorite Movies</h1>
+<h1>{{ user['name'] }}'s Favorite Movies</h1>
 
-    <ul>
-        {% for movie, details in movies.items() %}
-            <li>
-                <strong>{{ movie }}</strong><br>
-                Director: {{ details.director }}<br>
-                Year: {{ details.year }}<br>
-                Rating: {{ details.rating }}<br>
-                <form action="{{ url_for('delete_movie', user_id=user['id'], movie_id=details.id) }}" method="GET" style="display:inline;">
-                    <button type="submit">Delete</button>
-                </form>
-                <form action="{{ url_for('update_movie', user_id=user['id'], movie_id=details.id) }}" method="GET" style="display:inline;">
-                    <button type="submit">Update</button>
-                </form>
-            </li>
-        {% endfor %}
-    </ul>
-    <form action="{{ url_for('add_movie_to_user', user_id=user['id']) }}" method="GET" style="display:block;">
-                    <button type="submit">Add movie to {{ user['name'] }}'s favorite list</button>
-                </form>
-    <a href="{{ url_for('list_users') }}">Back to Users List</a>
+<ul>
+    {% for movie, details in movies.items() %}
+    <li>
+        <strong>{{ movie }}</strong><br>
+        Director: {{ details.director }}<br>
+        Year: {{ details.year }}<br>
+        Rating: {{ details.rating }}<br>
+        <form action="{{ url_for('delete_movie', user_id=user['id'], movie_id=details.id) }}" method="GET"
+              style="display:inline;"
+              onsubmit="return confirm('Are you sure you want to delete {{ movie }} from {{ user['name'] }}\'s favorite list?');">
+            <button type="submit">Delete</button>
+        </form>
+        <form action="{{ url_for('update_movie', user_id=user['id'], movie_id=details.id) }}" method="GET"
+              style="display:inline;">
+            <button type="submit">Update</button>
+        </form>
+    </li>
+    {% endfor %}
+</ul>
+<form action="{{ url_for('add_movie_to_user', user_id=user['id']) }}" method="GET" style="display:block;">
+    <button type="submit">Add movie to {{ user['name'] }}'s favorite list</button>
+</form>
+<a href="{{ url_for('list_users') }}">Back to Users List</a>
 </body>
 </html>
