--- a/templates/users.html
+++ b/templates/users.html
@@ -9,10 +9,14 @@
 <body>
     <h1>Welcome to MovieWeb App!</h1>
     <h2>Users</h2>
+    <a href="{{ url_for('add_user') }}">
+        <button type="button">Add an user</button>
+    </a>
     <ul>
         {% for user in users %}
             <li><a href="{{ url_for('get_user_movies', user_id=user['id']) }}">{{ user["name"] }}</a></li>
         {% endfor %}
     </ul>
+
 </body>
 </html>
